trips and checkout page

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -40,6 +40,47 @@
       </nav>
 
 
+      <!--Table-->
+
+
+<div class="container">
+
+  <div class="trip-title">Trips</div>
+
+  <table id="myTable" class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">Destination Name</th>
+        <th scope="col">Destination Price</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1<img src="../assets/card1.png" class="image1"></th>
+        <td>Paris</td>
+        <td>R1000</td>
+        <td><button class="btn btn-danger remove-button">Remove</button></td>
+      </tr>
+      <tr>
+        <th scope="row">2<img src="../assets/card2.png" class="image2"></th>
+        <td>Marseille</td>
+        <td>R1700</td>
+        <td><button class="btn btn-danger remove-button">Remove</button></td>
+      </tr>
+      <tr>
+        <th scope="row">3<img src="../assets/card4.png" class="image2"></th>
+        <td>Madrid</td>
+        <td>R2500</td>
+        <td><button class="btn btn-danger remove-button">Remove</button></td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
+
+
 
 
 
